<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/restart" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img"
        android:layout_margin="10dp"
        android:text="@string/permission_title"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/permission_description"
        android:layout_below="@id/title"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/grant_permission_button"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_settings"
            android:textColor="@color/light"
            android:layout_marginTop="16dp"/>

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/finish_button"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/light"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</RelativeLayout>